--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@democrance/logger",
     "version": "0.1.0",
-    "description": "Beautiful alternative for console.log",
+    "description": "Beautiful alternative for console logging",
     "keywords": [
         "console",
         "logger",
@@ -33,7 +33,7 @@
         "eslint": "^8.29.0",
         "typescript": "^4.9.3",
         "unbuild": "^1.0.2",
-        "vitest": "^0.25.4"
+        "vitest": "^0.25.5"
     },
     "engines": {
         "node": ">=14"
