--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "scripts": {
         "build": "rm -rf dist && unbuild",
         "lint": "eslint --ext .vue,.ts,.js .",
-        "test": "vitest"
+        "test": "vitest",
+        "test:coverage": "vitest run --coverage"
     },
     "devDependencies": {
         "@democrance/eslint-config": "^0.4.0",
         "@types/node": "^16.18.6",
+        "@vitest/coverage-c8": "^0.25.5",
         "@vue/tsconfig": "^0.1.3",
         "eslint": "^8.29.0",
         "typescript": "^4.9.3",
