--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,11 @@
     ],
     "compilerOptions": {
         "baseUrl": ".",
+        "outDir": "dist",
         "target": "ESNext",
         "module": "ESNext",
         "strict": false,
+        "declaration": true,
         "pretty": true,
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
