--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
         "lint": "eslint --fix --ext .ts,.js .",
         "prepublishOnly": "pnpm build",
         "release": "bumpp --commit --tag --no-push && pnpm publish --access public",
-        "test": "vitest",
+        "test": "vitest --coverage",
         "test:coverage": "vitest run --coverage"
     },
     "devDependencies": {
-        "@democrance/eslint-config": "^0.9.0",
-        "@democrance/utils": "^0.16.4",
+        "@democrance/eslint-config": "^0.11.1",
         "@types/node": "^18.17.5",
-        "@vitest/coverage-c8": "^0.33.0",
+        "@vitest/coverage-v8": "^0.34.5",
         "@vue/tsconfig": "^0.4.0",
         "bumpp": "^9.1.1",
         "eslint": "^8.47.0",
@@ -50,8 +49,5 @@
         "overrides": {
             "rollup": "^3.0.0"
         }
-    },
-    "dependencies": {
-        "@democrance/utils": "^0.16.4"
     }
 }
